Added ngAnimate and Membership Status

--- a/ChurchResourceManagerWeb/Views/Membership/_addMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_addMembership.cshtml
@@ -1,15 +1,15 @@
 ﻿<form id="amc.addMembershipForm" name="amc.addMembershipForm" novalidate ng-submit="amc.addMembership(amc.Membership, amc.addMembershipForm)" autocomplete="off">
     <div class="col-xs-12">
         <uib-accordion close-others="amc.accordionSettings.closeOthers">
-            <div uib-accordion-group class="panel-default" is-open="amc.accordionSettings.isOpen">
+            <div uib-accordion-group class="panel-default" is-open="amc.accordionSettings.isFamilyOpen">
                 <uib-accordion-heading>
-                    Family Information   <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isOpen}"></i>
+                    Family Information   <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isFamilyOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isFamilyOpen}"></i>
                 </uib-accordion-heading>
                 <div class="col-xs-6">
                     <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.familyNameTxtBx.$invalid && amc.addMembershipForm.familyNameTxtBx.$touched}">
                         <label for="familyNameTxtBx">Family Name</label>
-                        <input id="familyNameTxtBx" name="familyNameTxtBx" class="form-control" type="text" placeholder="(Ex. Torres-Velez)" 
-                               ng-model="amc.Membership.FamilyName" required maxlength="80"/>
+                        <input id="familyNameTxtBx" name="familyNameTxtBx" class="form-control" type="text" placeholder="(Ex. Torres-Velez)"
+                               ng-model="amc.Membership.FamilyName" required maxlength="80" />
                         <div class="help-block-error" ng-messages="amc.addMembershipForm.familyNameTxtBx.$error" ng-if="amc.addMembershipForm.familyNameTxtBx.$touched">
                             <div ng-messages-include="message-template"></div>
                         </div>
@@ -17,19 +17,26 @@
                 </div>
             </div>
 
-            <div uib-accordion-group class="panel-default" @*is-open="amc.accordionSettings.isOpen"*@>
+            <div uib-accordion-group class="panel-default" is-open="amc.accordionSettings.isMemberInfoOpen">
                 <uib-accordion-heading>
-                    Member Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isOpen}"></i>
+                    Member Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isMemberInfoOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isMemberInfoOpen}"></i>
                 </uib-accordion-heading>
-                <div uib-accordion-group class="panel-default" @*is-open="amc.accordionSettings.isOpen"*@>
+                <div class="form-group">
+                    <label for="ddlMembershipStatus">Membership Status</label>
+                    <select id="ddlMembershipStatus" name="ddlMembershipStatus" class="form-control" ng-model="amc.Membership.SelectedMembershipStatus" ng-options="g.Type for g in amc.membershipStatus" required></select>
+                    <div class="help-block-error" ng-messages="amc.addMembershipForm.ddlMembershipStatus.$error" ng-if="amc.addMembershipForm.ddlMembershipStatus.$touched">
+                        <div ng-messages-include="message-template"></div>
+                    </div>
+                </div>
+                <div uib-accordion-group class="panel-default" is-open="amc.accordionSettings.isPersonalInfoOpen">
                     <uib-accordion-heading>
-                        Personal Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isOpen}"></i>
+                        Personal Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isPersonalInfoOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isPersonalInfoOpen}"></i>
                     </uib-accordion-heading>
                     <div class="col-xs-6">
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.firstNameTxtBx.$invalid && amc.addMembershipForm.firstNameTxtBx.$touched}">
                             <label for="firstNameTxtBx">First Name</label>
                             <input id="firstNameTxtBx" name="firstNameTxtBx" class="form-control" type="text" placeholder="" ng-model="amc.Membership.FirstName" required
-                                   maxlength="80"/>
+                                   maxlength="80" />
                             <div class="help-block-error" ng-messages="amc.addMembershipForm.firstNameTxtBx.$error" ng-if="amc.addMembershipForm.firstNameTxtBx.$touched">
                                 <div ng-messages-include="message-template"></div>
                             </div>
@@ -37,12 +44,12 @@
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.middleNameTxtBx.$invalid && amc.addMembershipForm.middleNameTxtBx.$touched}">
                             <label for="middleNameTxtBx">Middle Name</label>
                             <input id="middleNameTxtBx" name="middleNameTxtBx" class="form-control" type="text" placeholder="" ng-model="amc.Membership.MiddleName"
-                                   maxlength="1"/>
+                                   maxlength="1" />
                         </div>
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.lastNameTxtBx.$invalid && amc.addMembershipForm.lastNameTxtBx.$touched}">
                             <label for="lastNameTxtBx">Last Name</label>
                             <input id="lastNameTxtBx" name="lastNameTxtBx" class="form-control" type="text" placeholder="" ng-model="amc.Membership.LastName" required
-                                   maxlength="90"/>
+                                   maxlength="90" />
                             <div class="help-block-error" ng-messages="amc.addMembershipForm.lastNameTxtBx.$error" ng-if="amc.addMembershipForm.lastNameTxtBx.$touched">
                                 <div ng-messages-include="message-template"></div>
                             </div>
@@ -52,7 +59,7 @@
                             <input id="dobTxtBx" name="dobTxtBx" class="form-control" type="text" ng-model="amc.Membership.Dob"
                                    ui-mask="99/99/9999"
                                    ui-mask-placeholder
-                                   model-view-value="true"/>
+                                   model-view-value="true" />
                         </div>
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.ddlGender.$invalid && amc.addMembershipForm.ddlGender.$touched}">
                             <label for="ddlGender">Gender</label>
@@ -78,25 +85,25 @@
                     </div>
                 </div>
 
-                <div uib-accordion-group class="panel-default" @*is-open="amc.accordionSettings.isOpen"*@>
+                <div uib-accordion-group class="panel-default" is-open="amc.accordionSettings.isContactInfoOpen">
                     <uib-accordion-heading>
-                        Contact Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isOpen}"></i>
+                        Contact Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isContactInfoOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isContactInfoOpen}"></i>
                     </uib-accordion-heading>
                     <div class="col-xs-6">
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.homePhoneNumberTxtBx.$invalid && amc.addMembershipForm.homePhoneNumberTxtBx.$touched}">
                             <label for="homePhoneNumberTxtBx">Home Phone Number</label>
-                            <input id="homePhoneNumberTxtBx" name="homePhoneNumberTxtBx" class="form-control" type="text" ng-model="amc.Membership.HomePhoneNumber" 
-                                   ui-mask="(999)-999-9999"/>
+                            <input id="homePhoneNumberTxtBx" name="homePhoneNumberTxtBx" class="form-control" type="text" ng-model="amc.Membership.HomePhoneNumber"
+                                   ui-mask="(999)-999-9999" />
                         </div>
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.cellPhoneNumberTxtBx.$invalid && amc.addMembershipForm.cellPhoneNumberTxtBx.$touched}">
                             <label for="cellPhoneNumberTxtBx">Cellphone Number</label>
-                            <input id="cellPhoneNumberTxtBx" name="cellPhoneNumberTxtBx" class="form-control" type="text" ng-model="amc.Membership.CellPhoneNumber" 
-                                   ui-mask="(999)-999-9999"/>
+                            <input id="cellPhoneNumberTxtBx" name="cellPhoneNumberTxtBx" class="form-control" type="text" ng-model="amc.Membership.CellPhoneNumber"
+                                   ui-mask="(999)-999-9999" />
                         </div>
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.emailTxtBx.$invalid && amc.addMembershipForm.emailTxtBx.$touched}">
                             <label for="emailTxtBx">Email</label>
-                            <input id="emailTxtBx" name="emailTxtBx" class="form-control" type="email" placeholder="joeShmoe@gmail.com" ng-model="amc.Membership.Email" 
-                                   maxlength="255"/>
+                            <input id="emailTxtBx" name="emailTxtBx" class="form-control" type="email" placeholder="joeShmoe@gmail.com" ng-model="amc.Membership.Email"
+                                   maxlength="255" />
                         </div>
                         <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.preferredContactMethodTxtBx.$invalid && amc.addMembershipForm.preferredContactMethodTxtBx.$touched}">
                             <label for="preferredContactMethodTxtBx">Preferred Contact Method</label>
@@ -109,25 +116,25 @@
                 </div>
             </div>
 
-            <div uib-accordion-group class="panel-default" @*is-open="amc.accordionSettings.isOpen"*@>
+            <div uib-accordion-group class="panel-default" is-open="amc.accordionSettings.isAddressInfoOpen">
                 <uib-accordion-heading>
-                    Address Information   <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isOpen}"></i>
+                    Address Information   <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': amc.accordionSettings.isAddressInfoOpen, 'glyphicon-chevron-up': !amc.accordionSettings.isAddressInfoOpen}"></i>
                 </uib-accordion-heading>
                 <div class="col-xs-6">
                     <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.address1TxtBx.$invalid && amc.addMembershipForm.address1TxtBx.$touched}">
                         <label for="address1TxtBx">Address</label>
-                        <input id="address1TxtBx" name="address1TxtBx" class="form-control" type="text" placeholder="123 Main St." ng-model="amc.Membership.Address1" required 
-                               maxlength="255"/>
+                        <input id="address1TxtBx" name="address1TxtBx" class="form-control" type="text" placeholder="123 Main St." ng-model="amc.Membership.Address1" required
+                               maxlength="255" />
                         <div class="help-block-error" ng-messages="amc.addMembershipForm.address1TxtBx.$error" ng-if="amc.addMembershipForm.address1TxtBx.$touched">
                             <div ng-messages-include="message-template"></div>
                         </div>
-                        <input id="address2TxtBx" name="address2TxtBx" class="form-control" type="text" placeholder="Apt. 123" ng-model="amc.Membership.Address2" 
-                               maxlength="255"/>
+                        <input id="address2TxtBx" name="address2TxtBx" class="form-control" type="text" placeholder="Apt. 123" ng-model="amc.Membership.Address2"
+                               maxlength="255" />
                     </div>
                     <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.cityTxtBx.$invalid && amc.addMembershipForm.cityTxtBx.$touched}">
                         <label for="cityTxtBx">City</label>
-                        <input id="cityTxtBx" name="cityTxtBx" class="form-control" type="text" placeholder="Milwaukee" ng-model="amc.Membership.City" required 
-                               maxlength="50"/>
+                        <input id="cityTxtBx" name="cityTxtBx" class="form-control" type="text" placeholder="Milwaukee" ng-model="amc.Membership.City" required
+                               maxlength="50" />
                         <div class="help-block-error" ng-messages="amc.addMembershipForm.cityTxtBx.$error" ng-if="amc.addMembershipForm.cityTxtBx.$touched">
                             <div ng-messages-include="message-template"></div>
                         </div>
@@ -141,8 +148,8 @@
                     </div>
                     <div class="form-group" ng-class="{'has-error' : amc.addMembershipForm.zipTxtBx.$invalid && amc.addMembershipForm.zipTxtBx.$touched}">
                         <label for="zipTxtBx">Zip Code</label>
-                        <input id="zipTxtBx" name="zipTxtBx" class="form-control" type="text" ng-model="amc.Membership.ZipCode" required 
-                               maxlength="10" ui-mask="99999-?9?9?9?9"/>
+                        <input id="zipTxtBx" name="zipTxtBx" class="form-control" type="text" ng-model="amc.Membership.ZipCode" required
+                               maxlength="10" ui-mask="99999-?9?9?9?9" />
                         <div class="help-block-error" ng-messages="amc.addMembershipForm.zipTxtBx.$error" ng-if="amc.addMembershipForm.zipTxtBx.$touched">
                             <div ng-messages-include="message-template"></div>
                         </div>
