--- a/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
@@ -15,21 +15,16 @@
                     <uib-tab index="0" heading="Family">
                         <family family="mc.Family" being-edited="mc.beingEdited.familyForm" on-edit="mc.doEdit(formName)" on-submit="mc.doSaveFamily(family)"></family>
                     </uib-tab>
-                    <uib-tab index="1" heading="Personal Information" @*style="padding-bottom: 1%"*@>
-                        <!--member information-->
-                        <div class="row">
-                            <div class="col-xs-11" style="padding-left: 3%;">
-                                <div ng-repeat="info in mc.memberInfoArray track by $index">
-                                    <div style="padding-bottom: 1%;">
-                                        <member-information being-edited="mc.beingEdited.personalInfoForm" member-info="info" on-edit="mc.doEdit(formName)" accordion-settings="mc.accordionSettings" index="$index" member-info-count="mc.memberInfoArray.length -1"></member-information>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </uib-tab>
-                    <uib-tab index="2" heading="Address Information">
+                    <uib-tab index="1" heading="Address Information">
                         <!--Address Information-->
-                        <address></address>
+                        <address location-address="mc.Address" on-submit="mc.doSaveAddressInfo(addressInfo)" on-edit="mc.doEdit(formName)" being-edited="mc.beingEdited.addressInfoForm" state-list="mc.stateList"></address>
+                    </uib-tab>
+                    <uib-tab index="2" heading="Personal Details" @*style="padding-bottom: 1%"*@>
+                        <!--member information-->
+                        <member-information being-edited="mc.beingEdited.personalInfoForm" member-info-array="mc.memberInfoArray" on-edit="mc.doEdit(formName)" accordion-settings="mc.accordionSettings" on-submit="mc.doSaveMembership(memberInfo)" on-find-active-index="mc.findActiveIndex(currentIndex, arrayCount)"></member-information>
+                    </uib-tab>
+                    <uib-tab index="3" heading="Contact Information">
+                        <contact-information on-submit="mc.doSaveContactInfo(contactInfo)" on-edit="mc.doEdit(formName)" contact-info="mc.contactInfo" on-find-active-index="mc.findActiveIndex(currentIndex, arrayCount)" being-edited="mc.beingEdited.contactInfoForm"></contact-information>
                     </uib-tab>
                 </uib-tabset>
             </div>
