--- a/ChurchResourceManagerWeb/Views/Membership/_address.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_address.cshtml
@@ -1,6 +1,6 @@
 ﻿<form name="ac.addressInfoMainForm" id="ac.addressInfoMainForm" novalidate autocomplete="off" ng-submit="ac.submit(ac.locationAddress, ac.addressInfoMainForm)">
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-6" ng-show="ac.beingEdited">
             <div class="form-group" ng-class="{'has-error' : ac.addressInfoMainForm.address1TxtBx.$invalid && ac.addressInfoMainForm.address1TxtBx.$touched}">
                 <label for="address1TxtBx">Address</label>
                 <input id="address1TxtBx" name="address1TxtBx" class="form-control" type="text" placeholder="123 Main St." ng-model="ac.locationAddress.Address1" required
@@ -35,6 +35,9 @@
                 </div>
             </div>
         </div>
+
+        <address-read-only location-address="ac.locationAddress" ng-show="!ac.beingEdited"></address-read-only>
+
     </div>
     <div>
         <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="ac.edit()" ng-disabled="ac.beingEdited">
