--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
@@ -1,6 +1,6 @@
 ﻿<form id="cic.contactInfoMainForm" name="cic.contactInfoMainForm" novalidate autocomplete="off" ng-submit="cic.submit(cic.contactInfo, cic.contactInfoMainForm)">
     <div class="row">
-        <div class="col-xs-11" style="padding-left: 3%;">
+        <div class="col-xs-11" style="padding-left: 3%;" ng-show="cic.beingEdited">
             <div ng-repeat="info in cic.contactInfo track by $index">
                 <div style="padding-bottom: 1%;">
                     <ng-form id="contactInfoForm" name="contactInfoForm">
@@ -54,5 +54,8 @@
                 </div>
             </div>
         </div>
+
+        <contact-information-read-only contact-info="cic.contactInfo" ng-show="!cic.beingEdited"></contact-information-read-only>
+
     </div>
 </form>
