Updated readonly to have a similar layout

--- a/ChurchResourceManagerWeb/Views/Membership/_address.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_address.cshtml
@@ -1,5 +1,5 @@
 ﻿<form name="ac.addressInfoMainForm" id="ac.addressInfoMainForm" novalidate autocomplete="off" ng-submit="ac.submit(ac.locationAddress, ac.addressInfoMainForm)">
-    <div class="row">
+    <div class="row" style="padding-left: 3%">
         <div class="col-xs-6" ng-show="ac.beingEdited">
             <div class="form-group" ng-class="{'has-error' : ac.addressInfoMainForm.address1TxtBx.$invalid && ac.addressInfoMainForm.address1TxtBx.$touched}">
                 <label for="address1TxtBx">Address</label>
