--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
@@ -1,8 +1,8 @@
 ﻿<form id="cic.contactInfoMainForm" name="cic.contactInfoMainForm" novalidate autocomplete="off" ng-submit="cic.submit(cic.contactInfo, cic.contactInfoMainForm)">
     <div class="row">
-        <div class="col-xs-11" style="padding-left: 3%;">
+        <div class="col-xs-11" @*style="padding-left: 3%;"*@>
             <div ng-repeat="info in cic.contactInfo track by $index">
-                <div style="padding-bottom: 1%;" ng-show="cic.beingEdited">
+                <div style="padding-bottom: 1%; padding-left: 3%;" ng-show="cic.beingEdited">
                     <ng-form id="contactInfoForm" name="contactInfoForm">
                         <div class="row">
                             <uib-accordion close-others="false">
