--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformationReadOnly.cshtml
@@ -1,5 +1,4 @@
-﻿<div class="col-xs-11" style="padding-left: 3%;">
-    <div style="padding-bottom: 1%;">
+﻿    <div style="padding-bottom: 1%;">
         <uib-accordion close-others="false">
             <div uib-accordion-group class="panel-default" is-open="cic.accordionSettings.isContactInfoOpen">
                 <uib-accordion-heading>
@@ -26,4 +25,3 @@
             </div>
         </uib-accordion>
     </div>
-</div>
