--- a/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
@@ -1,5 +1,5 @@
 ﻿<form id="fc.addFamilyForm" name="fc.addFamilyForm" novalidate ng-submit="fc.submit(fc.family, fc.addFamilyForm)" autocomplete="off">
-    <div class="row">
+    <div class="row" style="padding-left: 3%;">
         <div class="col-xs-6">
             <div class="form-group" ng-class="{'has-error' : fc.addFamilyForm.familyNameTxtBx.$invalid && fc.addFamilyForm.familyNameTxtBx.$touched}" ng-show="fc.beingEdited">
                 <label for="familyNameTxtBx">Family Name</label>
@@ -9,7 +9,7 @@
                     <div ng-messages-include="message-template"></div>
                 </div>
             </div>
-            
+
             <family-read-only ng-show="!fc.beingEdited" family="fc.family"></family-read-only>
 
         </div>
